--- a/cv.html
+++ b/cv.html
@@ -76,7 +76,10 @@
 			My project developed artificial intelligence to play no-limit Texas hold’em poker.</p>
 			
 			<li><b>BSc. Computer Science, University of Hull (2005-2008) (2:1)</b></li>
-			<p> Focused on software engineering and artificial intelligence. </p>
+			<p> Focused on software development and artificial intelligence. </p>
+			
+			<li><b>Postgraduate Certificate in Academic Practise (PGCAP), University of Hull, 2016-2017 (Pass)</b></li>
+			<p>Used artificial intelligence to detect student dropout in computer science cohorts.</p>
 
         </ul>
 
@@ -92,7 +95,7 @@
     <li>J Garcia-Porta, A Turner, K Wollenberg Valero et al, 2020“Environmental temperatures shape thermal physiology as well as diversification and genome-wide substitution rates in lizards” Nature communications, 2 10(1), pp.1-12, 2020</li>
     <li>Turner, Alexander, and Stephen Hayes. "The classification of minor gait alterations using wearable sensors and deep learning." IEEE Transactions on Biomedical Engineering 66, no. 11 (2019): 3136-3145.</li>
     <li>A Turner, A Tyrrell, M Trefzer, M Lones, “Evolutionary acquisition of complex traits in artificial epigenetic networks” Biosystems 176, 17-26, 2019</li>
-    <li>A Turner, L Caves, S Stepney, A Tyrrell, M Lones, “Artificial Epigenetic Networks: Automatic Decomposition of Dynamical Control Tasks Using Topological Self-Modification”, IEEE Transactions on neural networks and learning systems, 28 (
+    <li>A Turner, L Caves, S Stepney, A Tyrrell, M Lones, “Artificial Epigenetic Networks: Automatic Decomposition of Dynamical Control Tasks Using Topological Self-Modification”, IEEE Transactions on neural networks and learning systems, 28 (2016)
 
     <li>A Turner, M Lones, M Trefzer, S Smith, S Jamieson, J Alty, J Cosgrove, A Tyrrell, “Using epigenetic networks for the analysis of movement associated with levodopa therapy for Parkinson's disease”, Biosystems 146, 35-42, 2016</li>
     <li>M Lones, L Fuente, A Turner, L Caves, S Stepney, S Smith, A Tyrrell, “Artificial biochemical networks: Evolving dynamical systems to control dynamical systems”, IEEE Transactions on Evolutionary Computation, 18 (2), 145-166, 2014</li>
