--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Alexander Turner - Assistant Professor</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="google-site-verification" content="UVB8I7vW6Ta76x7GFgTFIK-S6jdMeP_zpBd-VctRitk" />
 </head>
 <body>
     <header>
