--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Alexander Turner - Assistant Professor</title>
+    <title>Alexander Turner - Assistant Professor, Department of Computer Science, University of Nottingham</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="google-site-verification" content="UVB8I7vW6Ta76x7GFgTFIK-S6jdMeP_zpBd-VctRitk" />
+	<meta name="description" content="The personal website for Alexander Turner, Assistant Professor of Computer Science at the University of Nottingham. Alex specialises in machine learning and its applications in healthcare. " >
 </head>
 <body>
     <header>
