--- a/cv.html
+++ b/cv.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Alexander Turner - Assistant Professor</title>
+    <title>Alexander Turner - Assistant Professor, Department of Computer Science, University of Nottingham</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="description" content="The personal website for Alexander Turner, Assistant Professor of Computer Science at the University of Nottingham. Alex specialises in machine learning and its applications in healthcare. " >
 </head>
 <body>
     <header>
