--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <a href="index.html">Home</a>
             <a href="teaching.html">Teaching</a>
             <a href="contact.html">Contact</a>
-          <a href="cv.html">Mini CV</a>
+            <a href="cv.html">Mini CV</a>
+	    <a href="https://github.com/apt503">Code</a>
         </nav>
     </header>
     <section id="about-me">
