--- a/cv.html
+++ b/cv.html
@@ -13,6 +13,7 @@
             <a href="teaching.html">Teaching</a>
             <a href="contact.html">Contact</a>
             <a href="cv.html">Mini CV</a>
+		<a href="https://github.com/apt503">Code</a>
         </nav>
     </header>
     <section id="about-me">
