--- a/teaching.html
+++ b/teaching.html
@@ -13,7 +13,7 @@
             <a href="teaching.html">Teaching</a>
             <a href="contact.html">Contact</a>
           <a href="cv.html">Mini CV</a>
-		<a href="https://github.com/apt503">Code</a>
+		<a href="https://github.com/apt503">GitHub</a>
         </nav>
     </header>
     <section id="about-me">
