--- a/teaching.html
+++ b/teaching.html
@@ -23,37 +23,49 @@
 <p><b>University of Nottingham</b></p>
 		
 		<ul>
-            <li><b>2020 – present – 2nd year Operating systems and concurrency (Co-module leader)</b><br> In this module we focused on promoting student engagement by creating a diverse 
-			environment of both lecture and laboratory teaching in which to allow students to learn and digest the material of the module. In addition I am responsible for designing the coursework and exam to best capture the assessment of desired learning outcomes. 
-			There are approximately 400 students on this module. </li>
-			
-			<li><b>2021 – present – 3rd year Mobile Device Programming (Co-module leader)</b><br> 
+
+			<li><b>2023 – present – 3rd year Mobile Device Programming (Module leader)</b><br> 
 			This module emphasises the practicality of software engineering for mobile devices. 
 			We allow the students to develop their ideas into practical solutions via coursework. 
 			We teach them to utilise the senor suites in modern mobile phones and use the specific 
 			development tools associated with the android framework to build the solution.. </li>
 			
-        </ul>
+			<li><b>2020 – 2023 – 2nd year Operating systems and concurrency (Co-module leader)</b><br> In this module we focused on promoting student engagement by creating a diverse 
+			environment of both lecture and laboratory teaching in which to allow students to learn and digest the material of the module. In addition I am responsible for designing the coursework and exam to best capture the assessment of desired learning outcomes. 
+			There are approximately 400 students on this module. </li>
+			
+			<li><b>2021 – 2023 – 3rd year Mobile Device Programming (Co-module leader)</b><br> 
+			This module emphasises the practicality of software engineering for mobile devices. 
+			</li>
+			
+            		
+			
+			
+	        </ul>
 
 		<p><b>University of Hull</b></p>
 
+	    <li><b>2019 – 2020 – 2nd year Artificial Intelligence (Module leader)</b><br> 
+			TIn this module we focused on promoting student engagement by creating an autonomously marked programming tool, w
+			hich present problems to students which they have to solve using code. This tool marks the students work in real time, provides feedback 
+			and allows students to see where they rank according to the average performance of the module. 
+			Additionally, it allows module leaders to get an understanding of student engagement and progress. </li>
+	    
 		<ul>
-            <li><b>2016 – 2020– 1st year Object orientated programming (Module leader)</b><br> 
-			This is a high cohort module with approximately 250 students. 
-			The focus of this module is to teach the process of building lager programs which are based upon well designed classes. 
-			My teaching evaluations of this module have always been graded as excellent, and in 2019, this module received the highest rated student feedback within the department for high cohort modules. </li>
-			
 			<li><b>2016 – 2020 – 1st year Procedural programming (Co-module leader)</b><br> 
 			TIn this module we focused on promoting student engagement by creating an autonomously marked programming tool, w
 			hich present problems to students which they have to solve using code. This tool marks the students work in real time, provides feedback 
 			and allows students to see where they rank according to the average performance of the module. 
 			Additionally, it allows module leaders to get an understanding of student engagement and progress. </li>
 			
-			<li><b>2019 – 2020 – 2nd year Artificial Intelligence (Module leader)</b><br> 
-			TIn this module we focused on promoting student engagement by creating an autonomously marked programming tool, w
-			hich present problems to students which they have to solve using code. This tool marks the students work in real time, provides feedback 
-			and allows students to see where they rank according to the average performance of the module. 
-			Additionally, it allows module leaders to get an understanding of student engagement and progress. </li>
+            <li><b>2016 – 2020– 1st year Object orientated programming (Module leader)</b><br> 
+			This is a high cohort module with approximately 250 students. 
+			The focus of this module is to teach the process of building lager programs which are based upon well designed classes. 
+			My teaching evaluations of this module have always been graded as excellent, and in 2019, this module received the highest rated student feedback within the department for high cohort modules. </li>
+			
+			
+			
+			
 			
         </ul>
 		
